--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,114 @@
+# Environment files
 .env
+.env.local
+.env.*.local
+
+# macOS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Anaconda/Conda
+.conda/
+envs/
+pkgs/
+.condarc
+conda-meta/
+environment.lock
+
+# Jupyter Notebook
+.ipynb_checkpoints
+*/.ipynb_checkpoints/*
+profile_default/
+ipython_config.py
+
+# Data directories (never commit large datasets)
+data/
+*.parquet
+*.h5
+*.hdf5
+*.feather
+*.csv
+*.json
+*.pkl
+*.pickle
+
+# Results and cache
+results/
+cache/
+logs/
+*.log
+
+# IDE and Editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Documentation builds
+docs/_build/
+docs/build/
+
+# Coverage reports
+htmlcov/
+.tox/
+.coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
+
+# Secrets and credentials
+*.pem
+*.key
+*.crt
+api_keys.txt
+credentials.json
+
+# Temporary files
+*.tmp
+*.temp
+.temporary/
+temp/
+
+# OS generated files
+Icon?
+.thumbnails
+
+# Package managers
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
